# matriarch

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
benches/: determinant_optimization.rs  mul_add_vs_raw.rs  multiplication_optimization.rs
examples/: vec2.rs
src/: lib.rs  mat2.rs  mat3.rs  mat4.rs  vec2.rs  vec3.rs  vec4.rs
