[package]
name = "matriarch"
version = "0.1.0"
authors = ["Paul <theassailant@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/theassailant/matriarch"
repository = "https://github.com/theassailant/matriarch"
keywords = ["math", "matrix multiplication", "linear algebra"]

[dependencies]
