[package]
name = "matriarch"
version = "0.2.0"
edition = "2018"
authors = ["Paul <theassailant@protonmail.com>"]
license = "MIT"
readme = "README.md"
description = "A Linear Algebra and Matrix library written in Rust."
homepage = "https://github.com/theassailant/matriarch"
repository = "https://github.com/theassailant/matriarch"
keywords = ["math", "matrix-multiply", "linear-algebra"]

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "multiplication_optimization"
harness = false
